Changes in RELEASE_1_2 from RELEASE_1_1

- remove SPF support (deprecated RFC 7208 section 3.1)
- add TLSA anyreply support (affects AXFR)
- change BerkeleyDB to tree(3) RB_* macros (faster?)
- fix EDNS compliancy:  https://ednscomp.isc.org/ednscomp/5a70566c18
- fix truncation code and give empty answers with TC bit set when appropriate
- fix CNAME's with DNSSEC
- fix PTR's with DNSSEC
- move to imsg functions with privsep for IPC messaging
- OpenBSD delphinusdnsd is pledged

Changes in RELEASE_1_1 from RELEASE_1_0

- dd-convert.c written to replace dd-convert.rb.  It now supports TLSA RR's as
an added bonus.  This utility does not rely on any external (BIND) tools except
for the linkage against openssl/libressl.
- manpage for dd-convert
- Mac OS X port has been dropped
- RFC 8020 compliance with empty non-terminal names starting this release
- Linux now depends on libbsd

Changes in RELEASE_1_0 from BETA_9

- name change from wildcarddnsd to delphinusdnsd
- fixed the long standing bug that assumed one time to live for all RRSETs in a domain name (ttl fix)
- internal database has been changed in it's ABI
- wildcarding is off for good (due to DNSSEC)
- split-horizon for A records is gone, (may be added back one day)
- EDNS fixup (RFC 2671)
- DNSSEC (RFC 4033, 4034, 4035)
- DNSSEC NSEC3 (RFC 5155)
- TLSA RR (described in RFC 6698)
- dd-convert.rb ruby zone sign tool
- Linux now relies on libressl 2.2.4 library, details in the configure
- some bug fixes

Changes in BETA_9 from BETA_8

- we have replaced parse.c with parse.y
- Linux now relies on the libressl 2.1.1 library, details in the configure
- commandline options have been moved to configuration file options to coexist
- options keyword in the configfile
- SPF (RR 99) RFC 4408 support
- fix a bug related to truncation
- SSHFP (RR 44) RFC 4255 (+ RFC 6594) support
- defineable ratelimit between 1 and 127 pps , see example8.conf for sample
- EDNS0 (RFC 6891) get detected and replied upon
- NAPTR (RFC 2915) support