@@ -23,7 +23,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd January 23, 2017
+.Dd December 27, 2017
 .Dt DD-CONVERT 8
 .Os 
 .Sh NAME
@@ -141,5 +141,5 @@ a temporary database path (gets cleaned up after successful exit).
 .Xr delphinusdns.conf 5 , 
 .Sh AUTHORS
 This software was written by
-.An Peter J. Philipp Aq pjp@centroid.eu
+.An Peter J. Philipp Aq petphi@delphinusdns.org
 
