@@ -23,7 +23,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd December 19, 2015
+.Dd December 27, 2017
 .Dt DELPHINUSDNS.CONF 5
 .Os 
 .Sh NAME
@@ -279,5 +279,5 @@ optdnssec = "dnssec" ;
 .Xr delphinusdnsd 8
 .Sh AUTHORS
 This software and manual was written by
-.An Peter J. Philipp Aq pjp@centroid.eu
+.An Peter J. Philipp Aq petphi@delphinusdns.org
 
