@@ -23,7 +23,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd January 23, 2017
+.Dd December 27, 2017
 .Dt DELPHINUSDNSD 8
 .Os 
 .Sh NAME
@@ -106,5 +106,5 @@ Be more verbose in debug mode.  This shows configfile parsing logic.
 .Xr pf 4 
 .Sh AUTHORS
 This software was written by
-.An Peter J. Philipp Aq pjp@centroid.eu
+.An Peter J. Philipp Aq petphi@delphinusdns.org
 
