@@ -1,3 +1,6 @@
+Changes in RELEASE_1_3 from RELEASE_1_2
+- ...
+
 Changes in RELEASE_1_2 from RELEASE_1_1
 
 - remove SPF support (deprecated RFC 7208 section 3.1)
